# pigeon_mail

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  AuthService.h  ConsoleUI.h  EventBus.h  Events.h  Message.h  Pigeon.h  PigeonMailApp.h  Player.h  Session.h  UI.h
src/: App.cpp  AuthService.cpp  ConsoleUI.cpp  Message.cpp  Pigeon.cpp  PigeonMailApp.cpp  Player.cpp  main.cpp
